--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "mockery/mockery": "~1.0",
         "orangehill/iseed": "^2.6",
         "phpunit/phpunit": "~6.0",
+        "summerblue/generator": "~0.5",
         "symfony/thanks": "^1.0",
         "xethron/migrations-generator": "^2.0"
     },
